--- a/es/index.html
+++ b/es/index.html
@@ -43,7 +43,7 @@
 				<div class="collapse navbar-collapse" id="navbar">
 					<ul class="navbar-nav" id="navbar-nav-lp">
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL<span id="closeNav1" class="closeNav d-lg-none">+</span></a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarAudiovisual">
 					        	<a class="dropdown-item" href="#.">Institucional</a>
 					        	<a class="dropdown-item" href="#.">Infraestructura</a>
@@ -476,7 +476,7 @@
 			<div class="row justify-content-center">
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 
-					<a data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="#">Acerca de GHM</a></li>
 						<li class="item-footer"><a class="item-footer" href="huevo.html">Gustavo Muñoz Lorenzo</a></li>
@@ -486,7 +486,7 @@
 						<li class="item-footer"><a class="item-footer" href="#.">Contacto</a></li>
 					</ul>
 
-					<a data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-audiovisual" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a href="#." class="item-footer">Institucional</a></li>
 						<li class="item-footer"><a href="#." class="item-footer">Infraestructura</a></li>
@@ -501,7 +501,7 @@
 
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 
-					<a data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav3" data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/institucional.html">Institucional</a></li>
@@ -515,7 +515,7 @@
 						<li class="item-footer"><a class="item-footer" href="fotografia/cruce.html">Cruce de Los Andes</a></li>
 					</ul>
 
-					<a data-toggle="" href="#footer-diseño" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Diseño<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav4" data-toggle="" href="#footer-diseño" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Diseño<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-diseño" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a href="#." class="item-footer">Gráfica</a></li>
 						<li class="item-footer"><a href="#." class="item-footer">Editorial</a></li>
@@ -528,7 +528,7 @@
 
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 
-					<a data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="#.">Stand</a></li>
 						<li class="item-footer"><a class="item-footer" href="#.">Arquigrafía</a></li>
@@ -539,7 +539,7 @@
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
-					<a data-toggle="" href="#footer-Drone" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Vuelos<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav6" data-toggle="" href="#footer-Drone" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Vuelos<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-Drone" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="#.">Drone</a></li>
 						<li class="item-footer"><a class="item-footer" href="#.">Helicóptero</a></li>
@@ -550,7 +550,7 @@
 
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 
-					<a data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav7" data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-oficinas" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer">Esteban Echeverría <br class="d-none d-lg-block">772 Sur (5400)</li>
 						<li class="item-footer">San Juan · Argentina</li>
@@ -564,7 +564,7 @@
 					</ul>
 
 
-					<a data-toggle="" href="#footer-trabaja" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Trabajá con nosotros<span class="closeNav d-lg-none">+</span></a>
+					<a id="closeNav8" data-toggle="" href="#footer-trabaja" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Trabajá con nosotros<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-trabaja" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 					</ul>
