--- a/es/fotografia/producciones.html
+++ b/es/fotografia/producciones.html
@@ -137,15 +137,15 @@
 	</header>
 	
 	<div>
-		<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
-		<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
+		<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-PRINCIPAL.jpg" class="d-none d-md-block img-fluid" alt="Emilia Greco">
+		<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid" alt="Emilia Greco">
 	</div>
 
 	<div class="container bio d-block d-md-none">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
-				<h1 class="titulo text-bio">Lorem ipsum dolor.</h1>
-				<p class="texto text-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur earum voluptas ad rem non voluptatum optio numquam!</p>
+				<h1 class="titulo text-bio">Emilia Greco</h1>
+				<p class="texto text-bio">Campaña Algar invierno 2017</p>
 			</div>
 		</div>
 	</div>
@@ -153,83 +153,74 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-01.jpg" class="img-fluid" alt="Emilia Greco">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore deleniti consequatur, odit distinctio, magni sapiente quo.</p>
+				<h2 class="titulo">Emilia Greco</h2>
+				<p class="texto">Campaña Algar invierno 2017</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
+				<h2 class="titulo">Guillermina Peñafort</h2>
+				<p class="texto">Book de modelo para campaña</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-02.jpg" class="img-fluid" alt="Guillermina Peñafort">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-03.jpg" class="img-fluid" alt="Guillermina Peñafort">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nesciunt at sunt, necessitatibus culpa! Rem, maiores, voluptates.</p>
+				<h2 class="titulo">Guillermina Peñafort</h2>
+				<p class="texto">Book de modelo para camaña</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
+				<h2 class="titulo">Congreso de niños, niñas y adolescentes</h2>
+				<p class="texto">Producción que se realizó para el Ministerio de Desarrollo Humano de la Provincia de San Juan en el año 2013.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-04.jpg" class="img-fluid" alt="Congreso de niños, niñas y adolescentes">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-05.jpg" class="img-fluid" alt="Congreso de niños, niñas y adolescentes">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique delectus harum, itaque debitis in, repudiandae atque dolore!</p>
+				<h2 class="titulo">Congreso de niños, niñas y adolescentes</h2>
+				<p class="texto">Producción que se realizó para el Ministerio de Desarrollo Humano de la Provincia de San Juan en el año 2013.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
+				<h2 class="titulo">Fotografía familiar</h2>
+				<p class="texto">Tomadas en nuestro estudio equipado con tecnología especifica de vanguardia para obtener fotografías de gran calidad, que se conviertan en un recuerdo que puede ser visible, expuesto y que perdure en el tiempo.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-06.jpg" class="img-fluid" alt="Fotografía familiar">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-07.jpg" class="img-fluid" alt="Retrato infantil">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Retrato infantil</h2>
+				<p class="texto">La fotografía es la manera de retener para siempre los momentos importantes. Una visión sobre un momento único en la vida de las personas.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Retrato infantil</h2>
+				<p class="texto">Trabajamos en equipo capturando instantes especiales, situaciones espontáneas y plasmando la naturalidad de las emociones presentes.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-08.jpg" class="img-fluid" alt="Veladero, San Juan">
-			</div>
-		</div>
-		<div class="row align-items-center">
-			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-09.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
-			</div>
-			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<img src="../../img/FOTOGRAFIA-PRODUCCIONES-EN-ESTUDIO-08.jpg" class="img-fluid" alt="Retrato infantil">
 			</div>
 		</div>
 	</div>
